Fixed skills blob horizontal alignment.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -439,6 +439,8 @@ body.dark-theme{
   border-radius: 3rem;
   place-items: center;
   margin-bottom: 1rem;
+  margin-left: auto;
+  margin-right: auto;
   transition: background .4s;
 }
 
